# elasticsearch-cosine-similarity

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
elasticsearch/: Dockerfile  README.md
src/: build_index.py  index.json  main.py  search_wiki.py  swem.py
